--- a/app/src/main/res/layout/weatherview.xml
+++ b/app/src/main/res/layout/weatherview.xml
@@ -7,19 +7,19 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textLocation"
         android:layout_width="65dp"
         android:layout_height="25dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="Ort"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintVertical_bias="0.3" />
 
     <android.support.constraint.Guideline
