--- a/app/src/main/res/layout/weatherview.xml
+++ b/app/src/main/res/layout/weatherview.xml
@@ -8,19 +8,20 @@
 
     <TextView
         android:id="@+id/textLocation"
-        android:layout_width="65dp"
-        android:layout_height="25dp"
+        android:layout_width="159dp"
+        android:layout_height="18dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="Ort"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.5" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
