--- a/app/src/main/res/layout/weatherview.xml
+++ b/app/src/main/res/layout/weatherview.xml
@@ -17,18 +17,22 @@
         android:gravity="center"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.509"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline4"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.15" />
+        app:layout_constraintGuide_percent="0.15"
+        tools:layout_editor_absoluteY="85dp"
+        tools:layout_editor_absoluteX="0dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -38,19 +42,34 @@
         app:layout_constraintGuide_percent="0.7132018" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="0dp"
+        android:id="@+id/weatherImage"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        android:src="@drawable/sonne"
+        android:padding="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/regen"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textTemperature"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="-90dp"
+        android:layout_marginRight="8dp"
+        android:text="90"
+        android:textAlignment="center"
+        android:textColor="@color/backgroundBlack"
+        android:textSize="300sp"
+        app:layout_constraintBottom_toBottomOf="@+id/weatherImage"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/weatherImage"
+        app:layout_constraintTop_toTopOf="@+id/weatherImage"
+        android:layout_marginTop="0dp" />
 
 </android.support.constraint.ConstraintLayout>
